<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="@dimen/app_bar_elevation">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextAppearance="@style/ToolBar.TitleText" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/default_big_text_size"
                android:text="@string/about_developers"/>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <com.china.cibn.bangtvmobile.bangtv.widget.SpringScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical">


            <ImageView
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/circle_margin_top"
                android:background="@drawable/bangtv_login_logo"
            />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
            <TextView
                android:layout_margin="@dimen/circle_margin_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_top"
                android:text="@string/activity_aboutus_text"
                android:textColor="@color/font_normal"
                android:textSize="@dimen/default_medium_text_size" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bangumi_details_user_avatar_margin_1"
        android:autoLink="email"
        android:text="@string/github_link"
        android:textSize="@dimen/default_small_text_size" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bangumi_details_user_avatar_margin_1"
        android:autoLink="web"
        android:text="@string/sina_weibo_link"
        android:textSize="@dimen/default_small_text_size" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bangumi_details_user_avatar_margin_1"
        android:autoLink="web"
        android:text="@string/facebook_link"
        android:textSize="@dimen/default_small_text_size" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/user_avatar_small_size">
        <ImageView
            android:layout_width="@dimen/bangumi_details_pic_height"
            android:layout_height="@dimen/bangumi_details_pic_height"
            android:background="@drawable/bangtv2015"/>
        <ImageView
            android:layout_marginLeft="@dimen/user_avatar_small_size"
            android:layout_width="@dimen/bangumi_details_pic_height"
            android:layout_height="@dimen/bangumi_details_pic_height"
            android:background="@drawable/bangtv_fuwu"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_about_dingyue"/>
        <TextView
            android:layout_marginLeft="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_about_fuwu"/>
    </LinearLayout>
</LinearLayout>
        </LinearLayout>

    </com.china.cibn.bangtvmobile.bangtv.widget.SpringScrollView>

</LinearLayout>






