<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
   >
            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:orientation="vertical">
                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    app:titleTextAppearance="@style/ToolBar.TitleText"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/vip"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_medium_text_size" />
                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:id="@+id/scView"
        android:layout_width="fill_parent"
        android:scrollbars="vertical"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white_80">
        <TextView
            android:layout_marginTop="@dimen/tab_bar_item_padding"
            android:layout_marginLeft="@dimen/tab_bar_item_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/default_medium_text_size"
            android:text="@string/vipactivity_text1"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tab_bar_item_padding"
            android:src="@drawable/vip_top" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/default_general_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_80"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin= "@dimen/tab_bar_item_padding"
            android:orientation="vertical">
            <TextView
                android:textSize="@dimen/default_medium_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/vipactivity_text2"/>
            <TextView
                android:layout_marginTop="@dimen/search_back_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vipactivity_text3"/>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/layout_pro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ListView
                android:id="@+id/list_item"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:dividerHeight="0.0dip"   ></ListView>
            </LinearLayout>
            <com.china.cibn.bangtvmobile.bangtv.widget.CircleProgressView
                android:id="@+id/circle_progress"
                android:layout_width="@dimen/circle_progress_view_default_size"
                android:layout_height="@dimen/circle_progress_view_default_size"
                android:layout_gravity="center|top"
                android:layout_marginTop="@dimen/default_general_margin"
                android:visibility="gone"
                app:matProg_barWidth="@dimen/circle_progress_view_default_border_width" />
        </FrameLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tab_bar_item_padding"
        android:background="@color/white_80"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="@dimen/tab_bar_item_padding"
                android:layout_marginLeft="@dimen/tab_bar_item_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_medium_text_size"
                android:textColor="@color/colorAccent"
                android:text="@string/vipactivity_text4"/>
            <CheckBox
                android:id="@+id/checkxieyi"
                android:layout_marginLeft="@dimen/left_general_margin"
                android:layout_marginTop="@dimen/tab_bar_item_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:checked="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/media_controller_bg"
                android:textSize="@dimen/default_tiny_text_size"
                android:text="@string/vipactivity_text5"

                android:layout_marginTop="@dimen/tab_bar_item_padding"/>
            <TextView
                android:id="@+id/tv_xieyi"
                android:layout_marginTop="@dimen/tab_bar_item_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/media_controller_bg"
                android:text="@string/vipactivity_text6"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_wxpay"
            android:layout_marginTop="@dimen/live_item_title_image_size"
            android:layout_gravity="center"
            android:layout_width="290dp"
            android:background="@drawable/wx_vip_btn"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@drawable/btn_vip_bangtv_font_style"
            android:text="@string/vipactivity_text7"/>
        <Button
            android:id="@+id/btn_paypal"
            android:layout_marginTop="@dimen/tab_bar_item_padding"
            android:layout_gravity="center"
            android:layout_width="290dp"
            android:background="@drawable/paypal_vip_btn"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@drawable/btn_vip_bangtv_font_style"
            android:text="@string/vipactivity_text8"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white_30"
            android:orientation="vertical"
            android:layout_margin="@dimen/tab_bar_item_padding">
            <TextView
                android:layout_marginTop="@dimen/circle_margin_top"
                android:layout_margin="@dimen/default_general_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_vip_msg"/>


        </LinearLayout>
    </LinearLayout>
       </LinearLayout>
    </ScrollView>
</LinearLayout>