<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextAppearance="@style/ToolBar.TitleText" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_settings"
                android:textSize="@dimen/default_big_text_size"
                android:layout_gravity="center"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/layout_about_me"
                android:layout_width="match_parent"
                android:layout_height="@dimen/user_tag_view_height"
                android:layout_marginTop="@dimen/default_grow_margin"
                android:background="@color/card_view_background"
                android:foreground="?attr/selectableItemBackground">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/default_grow_margin"
                    android:text="@string/about_developers"
                    android:textColor="@color/font_normal"
                    android:textSize="@dimen/default_medium_text_size" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="@dimen/default_grow_margin"
                    android:src="@drawable/register_bottom_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_bg" />


            <RelativeLayout
                android:id="@+id/layout_about_app"
                android:layout_width="match_parent"
                android:layout_height="@dimen/user_tag_view_height"
                android:background="@color/card_view_background"
                android:foreground="?attr/selectableItemBackground">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/default_grow_margin"
                    android:text="@string/about"
                    android:textColor="@color/font_normal"
                    android:textSize="@dimen/default_medium_text_size" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="@dimen/default_grow_margin"
                    android:src="@drawable/register_bottom_arrow" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layout_update"
                android:layout_width="match_parent"
                android:layout_height="@dimen/user_tag_view_height"
                android:layout_marginTop="@dimen/default_grow_margin"
                android:background="@color/card_view_background"
                android:foreground="?attr/selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/default_grow_margin"
                    android:text="@string/check_update"
                    android:textColor="@color/font_normal"
                    android:textSize="@dimen/default_medium_text_size" />

                <TextView
                    android:id="@+id/app_version_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="@dimen/default_grow_margin"
                    android:text="@string/about_version"
                    android:textColor="@color/black_alpha_45"
                    android:textSize="@dimen/default_medium_text_size" />

            </RelativeLayout>
        </LinearLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="bottom"
   >
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/weekday_bangumi_head_height"
        android:background="@drawable/setting_btn"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/red"
        android:textSize="@dimen/default_medium_text_size" />
</RelativeLayout>

</LinearLayout>
</LinearLayout>
